# stargazer

./: Dockerfile  README.md  Taskfile.yml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.do/: app.yaml  deploy.template.yaml
backend/: .dockerignore  Dockerfile  app.py  pyproject.toml  stella.yml
backend/apis/: cache.py  chatbot.py  nasa.py  spacedevs.py
public/: constellation_map.html
src/: App.tsx  index.css  main.tsx
src/components/: Bento2c.tsx  ChatPanel.css  ChatPanel.tsx  ConstellationMap.tsx  CountdownTimer.tsx  Dashboard.tsx  EventsBoard.tsx  FireballMap.tsx  HTMLRenderer.tsx  LaunchesBoard.tsx  Loading.tsx  POTD.tsx
src/components/ui/: bento-grid.tsx  card-hover-effect.tsx  event-card.tsx  shooting-stars.tsx  sparkles.tsx  stars-background.tsx  tabs.tsx
